# Zero_to_One_CropModel

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  maize_simulation.py  yield_analysis.py
src/simple_crop_model/: __init__.py  core.py  parameters.py  utils.py  weather.py
